# caveman

./: .gitignore  README.md  README.original.md  pyproject.toml
caveman_mcp/: server.py
evals/: plot.py
tests/: test_mcp_server.py
tests/caveman-compress/: todo-list.md
