[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caveman-mcp"
version = "0.1.0"
description = "MCP server for caveman prompts and compress tool — no API key required"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["mcp[cli]>=1.0"]

[project.scripts]
caveman-mcp = "caveman_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["caveman_mcp"]
