[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caveman-mcp"
version = "0.1.0"
description = "MCP server for caveman prompts and compress tool — no API key required"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["mcp[cli]>=1.0"]
authors = [{ name = "Alex Ruco", email = "info@dimensao-aclamada.pt" }]
keywords = ["mcp", "llm", "tokens", "compression", "caveman", "claude"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/alexruco/caveman"
Repository = "https://github.com/alexruco/caveman"
Issues = "https://github.com/alexruco/caveman/issues"

[project.scripts]
caveman-mcp = "caveman_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["caveman_mcp"]
